# databricks-slide-generator

./: .gitignore  README.md  app.yaml  databricks.yml
backend/: config.py  main.py  models.py  pyproject.toml
backend/auth/: user_workspace.py
backend/migrations/: 2026-05-07-editable-deck.sql  2026-05-10-deck-gslides.sql
backend/routers/: decks.py  genie.py  templates.py
backend/services/: brand_styles.py  deck_job_store.py  deck_service.py  genie_service.py  html_slides_service.py  inspector_script.py  llm_service.py  marker_service.py  pdf_export_service.py  pptx_import_service.py  pptx_skill_fillers.py  pptx_slides_service.py  pptx_template_storage.py  pptx_theme_extractor.py  sanitizer_service.py  template_presets.py  template_service.py  vegalite_service.py
backend/tests/: conftest.py  test_auth_user_workspace.py  test_brand_styles.py  test_deck_job_store.py  test_deck_service.py  test_decks_router.py  test_fonts.py  test_generation_format.py  test_genie_router.py  test_genie_service.py  test_llm_service.py  test_marker_service.py  test_models.py  test_pdf_export_service.py  test_pptx_skill_fillers.py  test_pptx_slides_service.py  test_pptx_template_flow.py  test_pptx_theme_extractor.py  test_sanitizer_service.py  test_template_router.py  test_template_service.py  test_vegalite_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
frontend/src/components/: DeckCanvas.tsx  (+8 more)
resources/: genie-slide.app.yml
scripts/: build.sh
(+14 files in other folders)
