[project]
name = "genie-slide-backend"
version = "0.1.0"
description = "Genie Slide Databricks App - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "databricks-sdk>=0.30.0",
    "pydantic>=2.9.0",
    "playwright>=1.47.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "pytest>=8.0.0",
]
